@@ -67,6 +67,8 @@ fixes:
 - Im Timer-Edit-Menu war das Menu zur Tagesauswahl nicht mehr sichtbar
 - Wurde eine Sendung von mehreren Suchtimern mit "Nur ankündigen" gefunden, wurde sie auch 
   mehrfach gelistet, Danke an Andreas Mair für den Hinweis.
+- Fehler bei "Nur ankündigen"-Suchtimer im Zusammenhang mit der Anzeige des zugehörigen Such-
+  timernamens korrigiert.
 
 
 2008-04-29: Version 0.9.24
